[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/general/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entity/PlayerNew.gd" type="Script" id=2]
[ext_resource path="res://scenes/SpriteWithBodyAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/weapons/magic wand.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/ui/box_outline.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/UIController.gd" type="Script" id=6]
[ext_resource path="res://scenes/ui/InteractKey.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/ui/PanelBeige.png" type="Texture" id=8]
[ext_resource path="res://QuestionBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Date.gd" type="Script" id=10]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 24.0

[sub_resource type="CircleShape2D" id=3]
radius = 264.002

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 22.0
margin_right = 41.0
margin_top = 34.0
margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 29.9169
margin_right = 26.0
margin_top = 38.0
margin_bottom = 31.0

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 13
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.001 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Date")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "unfreeze_time"
} ]
}

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 3
collision_mask = 16
script = ExtResource( 2 )
move_speed = 150

[node name="BodySprites" type="Node2D" parent="." index="0"]
editor/display_folded = true
position = Vector2( 0, -20 )

[node name="CharacterBody" parent="BodySprites" index="0" instance=ExtResource( 3 )]
frame = 26

[node name="MagicWand" parent="BodySprites" index="1" instance=ExtResource( 4 )]

[node name="PosAboveHead" parent="." index="1"]
position = Vector2( 0, -50 )

[node name="CollisionBox" parent="." index="3"]
z_index = 1
shape = SubResource( 1 )

[node name="Hurtbox" parent="." index="4"]
position = Vector2( 0, -20 )

[node name="HurtboxShape" parent="Hurtbox" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="RangeOfSight" parent="." index="5"]
position = Vector2( 0, -20 )

[node name="CollisionShape2D" parent="RangeOfSight" index="0"]
position = Vector2( 0, 20 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="6"]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_speed = 1.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="Fade" type="Sprite" parent="Camera2D" index="0"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2.25937, 11.2967 )
scale = Vector2( 22.3419, 14.5761 )
z_index = 200
texture = ExtResource( 5 )

[node name="UIController" type="Node2D" parent="." index="7"]
z_index = 4096
script = ExtResource( 6 )

[node name="InteractKey" parent="UIController" index="0" instance=ExtResource( 7 )]
visible = false
margin_top = 150.0
margin_bottom = 227.0
mouse_filter = 2

[node name="Dialogue" type="Panel" parent="UIController" index="1"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = 150.0
margin_right = 300.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 4 )

[node name="QuestionBox" parent="UIController" index="2" instance=ExtResource( 9 )]

[node name="Date" type="Panel" parent="UIController" index="3"]
margin_left = 352.0
margin_top = 193.0
margin_right = 480.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="UIController/Date" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -5

[node name="Date" type="Label" parent="UIController/Date/VBoxContainer" index="0"]
margin_right = 128.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aug 15 2019"
align = 1
valign = 3

[node name="Date2" type="Label" parent="UIController/Date/VBoxContainer" index="1"]
margin_top = 23.0
margin_right = 128.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aug 15 2019"
align = 1
valign = 2

[node name="Time" type="Label" parent="UIController/Date/VBoxContainer" index="2"]
margin_top = 37.0
margin_right = 128.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99:99"
align = 1
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
root_node = NodePath("../UIController")
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="RangeOfSight"]
